# whale-code

./: .gitignore  .whale_memory.json  AGENTS.md  README.md  instructions.md  pyproject.toml
agent/: __init__.py  completion.py  context.py  execution_policy.py  harness.py  prompt_template.txt  prompts.py  tools.py  whale_agent.py
agent/whale/: __init__.py  llm.py  loop.py  parsing.py  terminal.py  types.py
eval/: subset.txt
results/2026-04-04__15-38-47/: config.json  result.json
results/2026-04-04__15-38-47/build-cython-ext__3HpssVo/: config.json  result.json
results/2026-04-04__16-07-02/: config.json  result.json
results/2026-04-04__16-17-12/: config.json  result.json
results/2026-04-04__17-03-52/: config.json  result.json
results/2026-04-04__17-35-17/: config.json  result.json
results/2026-04-04__19-18-45/: config.json  result.json
results/2026-04-04__20-14-12/: config.json  result.json
results/2026-04-04__20-32-28/: config.json  result.json
results/2026-04-04__20-51-02/: config.json  result.json
results/2026-04-04__23-07-00/: config.json  result.json
results/2026-04-05__07-25-31/: config.json  result.json
results/2026-04-05__07-31-50/: config.json  result.json
results/2026-04-05__07-39-40/: config.json  result.json
results/2026-04-05__08-20-03/: config.json  result.json
results/2026-04-05__09-40-58/: config.json  result.json
results/2026-04-05__09-46-17/: config.json  result.json
results/2026-04-05__10-13-11/: config.json  result.json
results/2026-04-05__10-20-17/: config.json  result.json
(+7401 files in other folders)
