[project]
name = "whale-code"
version = "0.1.0"
description = "An agentic harness for Terminal-Bench 2.0"
requires-python = ">=3.12"
dependencies = [
    "harbor==0.3.0",
    "litellm",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
